--- a/.github/workflows/code quality-cpp-check.yml
+++ b/.github/workflows/code quality-cpp-check.yml
@@ -17,4 +17,4 @@ jobs:
     - name: Install cppcheck
       run: sudo apt -y install cppcheck
     - name: Run cppcheck
-      run: cppcheck 3_Implementation
+      run: cppcheck -C 3_Implementation
